--- a/css/main.css
+++ b/css/main.css
@@ -101,9 +101,13 @@ body{
 	margin:0px;
 }
 
+p{
+	font-family: 'Wendy One', sans-serif;
+}
 
+/*font-family: 'Anton', sans-serif;*/
 
-.splitText{
+/*.splitText{
 width: 600px;
 float: left;
 margin-top: 90px;
@@ -116,6 +120,16 @@ font-size:20px;
 	float:left;
 	margin-right:5px;
 }
+
+.letter-measure{
+	margin-right:0 !important;
+}
+
+.blank{
+	margin-right:0px !important;
+	white-space: pre !important;
+}*/
+
 
 #menu{
 	width:100%;
@@ -147,14 +161,6 @@ font-size:20px;
 	padding-right:0px;
 }
 
-.letter-measure{
-	margin-right:0 !important;
-}
-
-.blank{
-	margin-right:0px !important;
-	white-space: pre !important;
-}
 
 
 
