--- a/css/main.css
+++ b/css/main.css
@@ -193,6 +193,15 @@ font-size:20px;
 	text-align: center;
 }
 
+#blockBlue{
+	background-color: #2c539e;
+	color:#f1f1f1;
+	width:100%;
+	height:100%;
+	position:fixed;
+	text-align: center;
+}
+
 #blockRed{
 	background-color:#f40000;
 	color:#1e1e1e;
@@ -220,6 +229,11 @@ font-size:20px;
 #blockRed>.splitText{
 	font-size:62px !important;
 	font-family:'Anton' sans-serif; 
+}
+
+#blockBlue>.splitText{
+	font-size:40px !important;
+	
 }
 
 #blockGreen>.splitText{
