Added option for custom CSS
Added an option "useCSS" to ovewrite the default build-in styles with an
external css.

--- a/css/main.css
+++ b/css/main.css
@@ -107,28 +107,7 @@ p{
 
 /*font-family: 'Anton', sans-serif;*/
 
-/*.splitText{
-width: 600px;
-float: left;
-margin-top: 90px;
-margin-left: 20px;
-font-size:20px;
-}
-
-.splitText>div{
-	white-space:pre-line;
-	float:left;
-	margin-right:5px;
-}
-
-.letter-measure{
-	margin-right:0 !important;
-}
-
-.blank{
-	margin-right:0px !important;
-	white-space: pre !important;
-}*/
+/**/
 
 
 #menu{
