--- a/css/main.css
+++ b/css/main.css
@@ -190,6 +190,22 @@ p{
 	text-align: center;
 }
 
+#blockOrange{
+	background: #ffa84c;
+	background: -moz-linear-gradient(top,  #ffa84c 0%, #ff7b0d 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffa84c), color-stop(100%,#ff7b0d));
+	background: -webkit-linear-gradient(top,  #ffa84c 0%,#ff7b0d 100%);
+	background: -o-linear-gradient(top,  #ffa84c 0%,#ff7b0d 100%);
+	background: -ms-linear-gradient(top,  #ffa84c 0%,#ff7b0d 100%);
+	background: linear-gradient(to bottom,  #ffa84c 0%,#ff7b0d 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa84c', endColorstr='#ff7b0d',GradientType=0 );
+	color:#1e1e1e;
+	width:100%;
+	height:100%;
+	position:fixed;
+	text-align: center;
+}
+
 #blockWhite{
 	background-color:#f1f1f1;
 	width:100%;
@@ -224,6 +240,11 @@ p{
 #blockRed>.splitText{
 	font-size:62px !important;
 	font-family:'Anton' sans-serif; 
+}
+
+#blockOrange>.splitText{
+	margin-right:100%;
+	font-size:30px;
 }
 
 #blockBlue>.splitText{
@@ -292,6 +313,12 @@ p{
 
 .blocks>.controls>.arrowleft:before{
 	border-right-color:#f1f1f1 !important;
+}
+
+.justSplit{
+	background-color:#2c539e;
+	color:#f1f1f1;
+	margin-left:5px !important;
 }
 
 .controls{
