--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,20 @@ p{
 /*font-family: 'Anton', sans-serif;*/
 
 /**/
-
+	
+.split-sentences{	
+  position:absolute;
+  font-family: 'Anton', sans-serif;
+  font-weight:700;
+  margin:0;
+  padding:0;
+  width:800px;
+  text-align:center;
+  visibility:hidden;
+  font-size:120px;
+  top:0px;
+  margin-left:-100px;
+ }
 
 #menu{
 	width:100%;
@@ -174,6 +187,15 @@ p{
 
 #blockBlue{
 	background-color: #2c539e;
+	color:#f1f1f1;
+	width:100%;
+	height:100%;
+	position:fixed;
+	text-align: center;
+}
+
+#blockNavyBlue{
+	background-color: #0e2e63;
 	color:#f1f1f1;
 	width:100%;
 	height:100%;
@@ -248,6 +270,10 @@ p{
 }
 
 #blockBlue>.splitText{
+	font-size:40px !important;
+}
+
+#blockNavyBlue>.splitText{
 	font-size:40px !important;
 }
 
